# pppd-vpn

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  definitions.h  hdlc.c  hdlc.h  log.c  log.h  main.c  mem.c  mem.h  ppp.c  ppp.h  ppp_queue.c  ppp_queue.h  socket.c  socket.h  ssl.c  ssl.h  utils.c  utils.h  vpn.c  vpn.h
doc/: README.txt  notes.txt  ppp.sh
gui/app/: AppDelegate.m  NSOperation+StatisticsOperation.m  README.txt  StatisticsWindowController.xib  main.m
gui/app/Base.lproj/: Main.storyboard
gui/app/Images.xcassets/MenubarConnecting.imageset/: Contents.json
gui/app/Images.xcassets/MenubarDisconnected.imageset/: Contents.json
gui/app/Images.xcassets/MenubarError.imageset/: Contents.json
gui/osx/ClavisterVPN/: AppDelegate.h  Info.plist  NSOperation+StatisticsOperation.h  StatisticsWindowController.h  StatisticsWindowController.m  ViewController.h  ViewController.m
gui/osx/ClavisterVPN/Images.xcassets/AppIcon.appiconset/: Contents.json
gui/osx/ClavisterVPN/Images.xcassets/MenubarConnected.imageset/: Contents.json
gui/osx/ClavisterVPN/Images.xcassets/MenubarInit.imageset/: Contents.json
gui/osx/ClavisterVPN/Images.xcassets/StatusBarIconTest.imageset/: Contents.json
gui/osx/ClavisterVPN/Images.xcassets/banner.imageset/: Contents.json
test/: memtest.c
